# DX9Hook

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
demo/: DX9.cpp  DX9.hpp  demo.cpp  inject.cpp
source/: dll.cpp  dx9hook.cpp  dx9hook.hpp
